--- a/src/application/files/__sourcedir__/index.html
+++ b/src/application/files/__sourcedir__/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title><%= utils.classify(name) %></title>
@@ -7,8 +8,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <% if (material) { %>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><% } %>
 </head>
+
 <body>
   <<%= prefix %>-root></<%= prefix %>-root>
 </body>
+
 </html>
